--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,4 +6,12 @@ normal_user:
   salt: "pepper"
   created_at: "2007-01-01 00:00:00"
   updated_at: "2007-01-01 00:00:00"
+
+one:
+  id: 2
+  email: test2@openstreetmap.org
+  hashed_password: <%= Digest::MD5.hexdigest('test2') %>
+  salt: "pepper2"
+  created_at: "2007-01-01 00:00:00"
+  updated_at: "2007-01-01 00:00:00"
  
