--- a/test/fixtures/gtfs_sources.yml
+++ b/test/fixtures/gtfs_sources.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
-  name: MyString
-  url: MyString
+  name: hamilton
+  url: http://googlehsr.hamilton.ca/latest/google_transit.zip
   version: 1
   user_id: 1
 
