first api reading working

--- a/test/fixtures/mediawikicategories.yml
+++ b/test/fixtures/mediawikicategories.yml
@@ -2,8 +2,8 @@
 
 one:
   mediawikiserver_id: 1
-  name: 
-  description: MyText
+  name: BestPictureOfKosovoForWikipediaContest
+  description: Photos to tag
 
 two:
   mediawikiserver_id: 1
